# glkernel

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  glkernel-config.cmake
benchmarking/: glkernel_bench_auto.sh  visualize.py
cmake/: CompileOptions.cmake  Cppcheck.cmake  Custom.cmake  PlatformLinuxGCC.cmake  PlatformWindowsMSVC.cmake
data/: glkernel.js
deploy/: CMakeLists.txt
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  control  copyright  rules
docs/api-docs/: CMakeLists.txt
scripts/: JSInterface.cpp.template  JSInterface.h.template  generate.py  glkernel.js.template  kernel.js
scripts/templates/: JSInterface.cpp.template  JSInterface.h.template  glkernel.js.template
source/: CMakeLists.txt  glkernel-version.h.in
source/benchmarks/: CMakeLists.txt
source/benchmarks/benchmark/: CMakeLists.txt
source/benchmarks/glkernel-benchmarks/: CMakeLists.txt  noise_benchmark.cpp  sample_benchmark.cpp  scale_benchmark.cpp  shuffle_benchmark.cpp  sort_benchmark.cpp
source/codegeneration/: CMakeLists.txt
source/debugger/: CMakeLists.txt  main.cpp
source/examples/: CMakeLists.txt
source/examples/sample/: CMakeLists.txt  main.cpp
source/glkernel/: CMakeLists.txt
source/glkernel/include/glkernel/: Kernel.h  Kernel.hpp  glkernel_api.h  glm_compatability.h  noise.h  noise.hpp  normal_noise.h  normal_noise.hpp  randomnoise.h  sample.h  sample.hpp  scale.h  scale.hpp  sequence.h  sequence.hpp  shuffle.h  shuffle.hpp  sort.h  sort.hpp  square_points.h  square_points.hpp  uniform_noise.h  uniform_noise.hpp  white_noise.h  white_noise.hpp
source/glkernel/include/glkernel-generalizations/: AssertionMacros.h  ConstExpressions.cpp  StringMacros.h  TypeTraits.cpp  glkernel_generalizations.cpp  glkernel_generalizations.h  noise_generalized.h  noise_generalized.hpp  sample_generalized.h  sample_generalized.hpp  scale_generalized.h  scale_generalized.hpp  sequence_generalized.h  sequence_generalized.hpp  shuffle_generalized.h  shuffle_generalized.hpp  sort_generalized.h  sort_generalized.hpp
source/glkernel/include/glkernel/archive/: square_points.hpp
source/glkernel/source/: glkernel.cpp  randomnoise.cpp  test.cpp  white_noise.cpp
source/templatetest/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/tests/glkernel-test/: CMakeLists.txt  glkernel_test.cpp  noise_test.cpp  sample_test.cpp  scale_test.cpp  sequence_test.cpp  shuffle_test.cpp  sort_test.cpp  tkernel_test.cpp
source/tests/glkernel-will_fail_tests/: CMakeLists.txt  noise_fail.cpp  sample_fail.cpp  scale_fail.cpp  sequence_fail.cpp  shuffle_fail.cpp  sort_fail.cpp
source/tools/: CMakeLists.txt
source/tools/glkernel-cli/: AbstractKernelExporter.h  CMakeLists.txt  JSInterface.cpp  JSInterface.h  JsonExporter.cpp  JsonExporter.h  JsonImporter.cpp  JsonImporter.h  KernelGenerator.cpp  KernelGenerator.h  KernelGenerator.hpp  KernelJsonExporter.cpp  KernelJsonExporter.h  KernelJsonImporter.cpp  KernelJsonImporter.h  KernelObject.cpp  KernelObject.h  PngExporter.cpp  PngExporter.h  glkernel.js  helper.cpp  helper.h  main.cpp  scripting.cpp  scripting.h
source/tools/glkernel-cli/export/: KernelExporter.hpp  KernelJsonExporter.cpp  KernelJsonExporter.hpp
source/tools/glkernel-cmd/: CMakeLists.txt  KernelGeneration.cpp  KernelGeneration.h  KernelToJson.h  jsonConverter.cpp  jsonConverter.h  main.cpp  parsing.cpp  parsing.h  variantConversion.cpp  variantConversion.h
